--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browser-specs": "~1.40.0",
     "chalk": "~4.1.0",
     "compare-versions": "~3.6.0",
+    "deep-diff": "~1.0.2",
     "mdn-confluence": "~2.2.2",
     "mocha": "~9.0.0",
     "ora": "~5.4.0",
@@ -40,6 +41,7 @@
   },
   "scripts": {
     "confluence": "node ./node_modules/mdn-confluence/main/generate.es6.js --output-dir=. --bcd-module=./index.js",
+    "diff": "node scripts/diff.js",
     "mocha": "mocha \"*/**.test.js\"",
     "lint": "node test/lint",
     "fix": "node scripts/fix",
