--- a/html/manifest/prefer_related_applications.json
+++ b/html/manifest/prefer_related_applications.json
@@ -6,7 +6,7 @@
           "mdn_url": "https://developer.mozilla.org/docs/Web/Manifest/prefer_related_applications",
           "support": {
             "chrome": {
-              "version_added": null
+              "version_added": "44"
             },
             "chrome_android": {
               "version_added": null
