--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fix": "node scripts/fix",
     "mirror": "node scripts/mirror",
     "stats": "node scripts/statistics",
+    "release-build": "node scripts/release-build",
     "release-notes": "node scripts/release-notes",
     "show-errors": "npm test 1> /dev/null",
     "test": "npm run mocha && npm run lint",
