--- a/html/manifest/related_applications.json
+++ b/html/manifest/related_applications.json
@@ -9,7 +9,7 @@
               "version_added": null
             },
             "chrome_android": {
-              "version_added": null
+              "version_added": "44"
             },
             "edge": {
               "version_added": null
