--- a/.github/workflows/close-incomplete-issues.yml
+++ b/.github/workflows/close-incomplete-issues.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   close-issues-if-invalid:
+    runs-on: ubuntu-latest
     steps:
       - uses: ddbeck/invalid-issue-closer@v1
         with:
