--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,20 +10,27 @@ on:
     branches: [ ] # Test on push to every branch
 
 jobs:
-  test:
-
+  maintenance_lts:
+    name: "Node.js maintenance LTS"
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [ 10.x, 14.x ]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2-beta
+    - uses: actions/setup-node@v2-beta
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 10.x
+    - run: npm install
+    - run: npm test
+      env:
+        FORCE_COLOR: 3
+
+  active_lts:
+    name: "Node.js active LTS"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2-beta
+      with:
+        node-version: 14.x
     - run: npm install
     - run: npm test
       env:
