Reduce the repitition of "Node.js" in GitHub UI

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   maintenance_lts:
-    name: "Node.js maintenance LTS"
+    name: "Maintenance LTS"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
         FORCE_COLOR: 3
 
   active_lts:
-    name: "Node.js active LTS"
+    name: "Active LTS"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
