Rename build job names to prepare for branch protection rules (#8768)
* Summarize matrix builds as a single job
* Drop summary job https://github.com/mdn/browser-compat-data/pull/8768#pullrequestreview-569505994
* De-matrix-ify the testing jobs
* Reduce the repitition of "Node.js" in GitHub UI
* Try using matrix builds after all

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,18 +10,19 @@ on:
     branches: [ ] # Test on push to every branch
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
     strategy:
       matrix:
-        node-version: [ 10.x, 14.x ]
-
+        include:
+          - name: Maintenance LTS
+            node-version: 10.x # use oldest
+          - name: Active LTS
+            node-version: 14.x
+    name: ${{ matrix.name }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2-beta
+    - uses: actions/setup-node@v2-beta
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
