--- a/webextensions/api/browserSettings.json
+++ b/webextensions/api/browserSettings.json
@@ -113,7 +113,8 @@
                 "version_added": false
               },
               "firefox": {
-                "version_added": "72"
+                "version_added": "72",
+                "notes": "From Firefox version 88 this setting is read-only."
               },
               "firefox_android": {
                 "version_added": false
