--- a/webextensions/api/browserSettings.json
+++ b/webextensions/api/browserSettings.json
@@ -114,7 +114,7 @@
               },
               "firefox": {
                 "version_added": "72",
-                "notes": "From Firefox version 88 this setting is read-only."
+                "notes": "From Firefox version 88 this setting is read-only (<a href='https://bugzil.la/1363010'>bug 1626365</a>)."
               },
               "firefox_android": {
                 "version_added": false
