--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "fix": "node scripts/fix",
     "mirror": "node scripts/mirror",
     "stats": "node scripts/statistics",
-    "release-notes": "node scripts/release-notes",
+    "release-pulls": "node scripts/release-pulls",
+    "release-stats": "node scripts/release-stats",
     "show-errors": "npm test 1> /dev/null",
     "test": "npm run mocha && npm run lint",
     "traverse": "node scripts/traverse"
