Reorder lint and mocha tests as per feedback

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "release-pulls": "node scripts/release-pulls",
     "release-stats": "node scripts/release-stats",
     "show-errors": "npm test 1> /dev/null",
-    "test": "npm run mocha && npm run lint",
+    "test": "npm run lint && npm run mocha",
     "traverse": "node scripts/traverse"
   }
 }
