--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "fix": "node scripts/fix",
     "mirror": "node scripts/mirror",
     "stats": "node scripts/statistics",
+    "release-build": "node scripts/release-build",
     "release-pulls": "node scripts/release-pulls",
     "release-stats": "node scripts/release-stats",
     "show-errors": "npm test 1> /dev/null",
-    "test": "npm run mocha && npm run lint",
+    "test": "npm run lint && npm run mocha",
     "traverse": "node scripts/traverse"
   }
 }
