--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release package
 
 on:
   release:
-    types: [published]
+    types: [published, edited]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2-beta
       with:
-        node-version: 10.x
+        node-version: 14.x
         registry-url: "https://registry.npmjs.org/"
     - run: npm install
     - run: npm test
