--- a/api/MediaTrackSettings.json
+++ b/api/MediaTrackSettings.json
@@ -3,6 +3,10 @@
     "MediaTrackSettings": {
       "__compat": {
         "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings",
+        "spec_url": [
+          "https://w3c.github.io/mediacapture-main/#media-track-settings",
+          "https://w3c.github.io/mediacapture-screen-share/#extensions-to-mediatracksettings"
+        ],
         "support": {
           "chrome": {
             "version_added": "59"
@@ -50,6 +54,7 @@
       "aspectRatio": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/aspectRatio",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-aspectratio",
           "support": {
             "chrome": {
               "version_added": true
@@ -98,6 +103,7 @@
       "autoGainControl": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/autoGainControl",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-autogaincontrol",
           "support": {
             "chrome": {
               "version_added": true
@@ -160,6 +166,7 @@
       "channelCount": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/channelCount",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-channelcount",
           "support": {
             "chrome": {
               "version_added": false
@@ -208,6 +215,7 @@
       "cursor": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/cursor",
+          "spec_url": "https://w3c.github.io/mediacapture-screen-share/#dom-mediatracksettings-cursor",
           "support": {
             "chrome": {
               "version_added": "71"
@@ -256,6 +264,7 @@
       "deviceId": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/deviceId",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-deviceid",
           "support": {
             "chrome": {
               "version_added": true
@@ -304,6 +313,7 @@
       "displaySurface": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/displaySurface",
+          "spec_url": "https://w3c.github.io/mediacapture-screen-share/#dom-mediatrackconstraintset-displaysurface",
           "support": {
             "chrome": {
               "version_added": "71"
@@ -352,6 +362,7 @@
       "echoCancellation": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/echoCancellation",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-echocancellation",
           "support": {
             "chrome": {
               "version_added": true
@@ -400,6 +411,7 @@
       "facingMode": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/facingMode",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-facingmode",
           "support": {
             "chrome": {
               "version_added": true
@@ -448,6 +460,7 @@
       "frameRate": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/frameRate",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-framerate",
           "support": {
             "chrome": {
               "version_added": true
@@ -496,6 +509,7 @@
       "groupId": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/groupId",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-groupid",
           "support": {
             "chrome": {
               "version_added": true
@@ -544,6 +558,7 @@
       "height": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/height",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-height",
           "support": {
             "chrome": {
               "version_added": true
@@ -592,6 +607,7 @@
       "latency": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/latency",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-latency",
           "support": {
             "chrome": {
               "version_added": false
@@ -640,6 +656,7 @@
       "logicalSurface": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/logicalSurface",
+          "spec_url": "https://w3c.github.io/mediacapture-screen-share/#dom-mediatrackconstraintset-logicalsurface",
           "support": {
             "chrome": {
               "version_added": "71"
@@ -688,6 +705,7 @@
       "noiseSuppression": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/noiseSuppression",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-noisesuppression",
           "support": {
             "chrome": {
               "version_added": true
@@ -798,6 +816,7 @@
       "sampleRate": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/sampleRate",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-samplerate",
           "support": {
             "chrome": {
               "version_added": false
@@ -846,6 +865,7 @@
       "sampleSize": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/sampleSize",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-samplesize",
           "support": {
             "chrome": {
               "version_added": true
@@ -942,6 +962,7 @@
       "width": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/MediaTrackSettings/width",
+          "spec_url": "https://w3c.github.io/mediacapture-main/#dom-mediatracksettings-width",
           "support": {
             "chrome": {
               "version_added": true
