Add spec URLs for Performance* objects

--- a/api/PerformanceMeasure.json
+++ b/api/PerformanceMeasure.json
@@ -3,6 +3,7 @@
     "PerformanceMeasure": {
       "__compat": {
         "mdn_url": "https://developer.mozilla.org/docs/Web/API/PerformanceMeasure",
+        "spec_url": "https://w3c.github.io/user-timing/#dom-performance-measure",
         "support": {
           "chrome": {
             "version_added": "25"
