Add spec URLs for SVGAElement to SVGAnimationElement objects

--- a/api/SVGAnimatedPreserveAspectRatio.json
+++ b/api/SVGAnimatedPreserveAspectRatio.json
@@ -3,6 +3,7 @@
     "SVGAnimatedPreserveAspectRatio": {
       "__compat": {
         "mdn_url": "https://developer.mozilla.org/docs/Web/API/SVGAnimatedPreserveAspectRatio",
+        "spec_url": "https://svgwg.org/svg2-draft/coords.html#InterfaceSVGAnimatedPreserveAspectRatio",
         "support": {
           "chrome": {
             "version_added": "5"
