--- a/api/SVGPreserveAspectRatio.json
+++ b/api/SVGPreserveAspectRatio.json
@@ -3,6 +3,7 @@
     "SVGPreserveAspectRatio": {
       "__compat": {
         "mdn_url": "https://developer.mozilla.org/docs/Web/API/SVGPreserveAspectRatio",
+        "spec_url": "https://svgwg.org/svg2-draft/coords.html#InterfaceSVGPreserveAspectRatio",
         "support": {
           "chrome": {
             "version_added": "1"
