Spec URLs last pass: MediaKeyMessageEvent to RTCIdentityAssertion

--- a/api/RTCConfiguration.json
+++ b/api/RTCConfiguration.json
@@ -197,6 +197,7 @@
       "iceServers": {
         "__compat": {
           "mdn_url": "https://developer.mozilla.org/docs/Web/API/RTCConfiguration/iceServers",
+          "spec_url": "https://w3c.github.io/webrtc-pc/#dom-rtcconfiguration-iceservers",
           "support": {
             "chrome": {
               "version_added": "23"
