--- a/css/properties/font-variant-east-asian.json
+++ b/css/properties/font-variant-east-asian.json
@@ -57,10 +57,10 @@
               "version_added": "46"
             },
             "safari": {
-              "version_added": false
+              "version_added": "9.1"
             },
             "safari_ios": {
-              "version_added": false
+              "version_added": "9.3"
             },
             "samsunginternet_android": {
               "version_added": "8.0"
