Update to ESLint 7.27.0

--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "better-ajv-errors": "~0.7.0",
     "chalk": "~4.1.0",
     "compare-versions": "~3.6.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "mdn-confluence": "~2.2.2",
     "mocha": "~8.4.0",
     "ora": "~5.4.0",
