[Temporal] Fixes to spec_url values

--- a/javascript/builtins/Temporal/now.json
+++ b/javascript/builtins/Temporal/now.json
@@ -3,62 +3,11 @@
     "builtins": {
       "Temporal": {
         "now": {
-          "__compat": {
-            "description": "Temporal.now interface",
-            "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now",
-            "spec_url": "https://tc39.es/proposal-temporal/",
-            "support": {
-              "chrome": {
-                "version_added": false
-              },
-              "chrome_android": {
-                "version_added": false
-              },
-              "edge": {
-                "version_added": false
-              },
-              "firefox": {
-                "version_added": false
-              },
-              "firefox_android": {
-                "version_added": false
-              },
-              "ie": {
-                "version_added": false
-              },
-              "nodejs": {
-                "version_added": false
-              },
-              "opera": {
-                "version_added": false
-              },
-              "opera_android": {
-                "version_added": false
-              },
-              "safari": {
-                "version_added": false
-              },
-              "safari_ios": {
-                "version_added": false
-              },
-              "samsunginternet_android": {
-                "version_added": false
-              },
-              "webview_android": {
-                "version_added": false
-              }
-            },
-            "status": {
-              "experimental": true,
-              "standard_track": true,
-              "deprecated": false
-            }
-          },
-          "constructor": {
+          "now": {
             "__compat": {
-              "description": "Temporal.now constructor",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/constructor",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "description": "Temporal.now interface",
+              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal-now-object",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -110,8 +59,8 @@
           "instant()": {
             "__compat": {
               "description": "Temporal.now.instant()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/instant",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/instant",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.instant",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -163,8 +112,8 @@
           "timeZone()": {
             "__compat": {
               "description": "Temporal.now.timeZone()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/timeZone",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/timezone",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.timezone",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -216,8 +165,8 @@
           "zonedDateTime()": {
             "__compat": {
               "description": "Temporal.now.zonedDateTime()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/zonedDateTime",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/zoneddatetime",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.zoneddatetime",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -269,8 +218,8 @@
           "zonedDateTimeISO()": {
             "__compat": {
               "description": "Temporal.now.zonedDateTimeISO()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/zonedDateTimeISO",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/zoneddatetimeiso",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.zoneddatetimeiso",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -322,8 +271,8 @@
           "plainDate()": {
             "__compat": {
               "description": "Temporal.now.plainDate()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/plainDate",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindate",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.plaindate",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -375,8 +324,8 @@
           "plainDateISO()": {
             "__compat": {
               "description": "Temporal.now.plainDateISO()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/plainDateISO",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindateiso",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.plaindateiso",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -428,8 +377,8 @@
           "plainDateTime()": {
             "__compat": {
               "description": "Temporal.now.plainDateTime()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/plainDateTime",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindatetime",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.plaindatetime",
               "support": {
                 "chrome": {
                   "version_added": false
@@ -481,8 +430,8 @@
           "plainDateTimeISO()": {
             "__compat": {
               "description": "Temporal.now.plainDateTimeISO()",
-              "mdn_url": "https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Temporal/now/plainDateTimeISO",
-              "spec_url": "https://tc39.es/proposal-temporal/",
+              "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindatetimeiso",
+              "spec_url": "https://tc39.es/proposal-temporal/#sec-temporal.now.plaindatetimeiso",
               "support": {
                 "chrome": {
                   "version_added": false
