Replace, e.g, "from()" identifiers w/ "from" (no parens)
https://github.com/mdn/browser-compat-data/blob/master/schemas/compat-data.schema.json#L255-L264
doesn’t allow feature identifiers to contain parenthesis; instead it
restricts them to "^(?!__compat)[a-zA-Z_0-9-$@]*$".

And in the rest of the tree, existing feature identifiers method names omit the parenthesis.

--- a/javascript/builtins/Temporal/now.json
+++ b/javascript/builtins/Temporal/now.json
@@ -54,7 +54,7 @@
               "deprecated": false
             }
           },
-          "instant()": {
+          "instant": {
             "__compat": {
               "description": "Temporal.now.instant()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/instant",
@@ -107,7 +107,7 @@
               }
             }
           },
-          "timeZone()": {
+          "timeZone": {
             "__compat": {
               "description": "Temporal.now.timeZone()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/timezone",
@@ -160,7 +160,7 @@
               }
             }
           },
-          "zonedDateTime()": {
+          "zonedDateTime": {
             "__compat": {
               "description": "Temporal.now.zonedDateTime()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/zoneddatetime",
@@ -213,7 +213,7 @@
               }
             }
           },
-          "zonedDateTimeISO()": {
+          "zonedDateTimeISO": {
             "__compat": {
               "description": "Temporal.now.zonedDateTimeISO()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/zoneddatetimeiso",
@@ -266,7 +266,7 @@
               }
             }
           },
-          "plainDate()": {
+          "plainDate": {
             "__compat": {
               "description": "Temporal.now.plainDate()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindate",
@@ -319,7 +319,7 @@
               }
             }
           },
-          "plainDateISO()": {
+          "plainDateISO": {
             "__compat": {
               "description": "Temporal.now.plainDateISO()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindateiso",
@@ -372,7 +372,7 @@
               }
             }
           },
-          "plainDateTime()": {
+          "plainDateTime": {
             "__compat": {
               "description": "Temporal.now.plainDateTime()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindatetime",
@@ -425,7 +425,7 @@
               }
             }
           },
-          "plainDateTimeISO()": {
+          "plainDateTimeISO": {
             "__compat": {
               "description": "Temporal.now.plainDateTimeISO()",
               "mdn_url": "https://developer.mozilla.org/docs/web/javascript/reference/global_objects/temporal/now/plaindatetimeiso",
