node-html-parser is supposed to be a dev dependency

--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "Browser compatibility data provided by MDN Web Docs",
   "main": "index.js",
   "types": "index.d.ts",
-  "dependencies": {
-    "node-html-parser": "^1.1.19"
-  },
   "engines": {
     "node": ">=10.0.0"
   },
@@ -36,6 +33,7 @@
     "compare-versions": "~3.6.0",
     "mdn-confluence": "~2.2.2",
     "mocha": "~8.4.0",
+    "node-html-parser": "^1.1.19",
     "ora": "~5.4.0",
     "prettier": "~2.3.0",
     "yargs": "~16.2.0"
