--- a/browsers/deno.json
+++ b/browsers/deno.json
@@ -79,6 +79,13 @@
           "status": "current",
           "engine": "V8",
           "engine_version": "9.1"
+        },
+        "1.11": {
+          "release_date": "2020-06-08",
+          "release_notes": "https://github.com/denoland/deno/releases/tag/v1.11.0",
+          "status": "nightly",
+          "engine": "V8",
+          "engine_version": "9.1"
         }
       }
     }
