--- a/browsers/deno.json
+++ b/browsers/deno.json
@@ -76,16 +76,23 @@
         "1.10": {
           "release_date": "2020-05-11",
           "release_notes": "https://github.com/denoland/deno/releases/tag/v1.10.1",
-          "status": "current",
+          "status": "retired",
           "engine": "V8",
           "engine_version": "9.1"
         },
         "1.11": {
           "release_date": "2020-06-08",
           "release_notes": "https://github.com/denoland/deno/releases/tag/v1.11.0",
-          "status": "nightly",
+          "status": "current",
           "engine": "V8",
           "engine_version": "9.1"
+        },
+        "1.12": {
+          "release_date": "2020-07-13",
+          "release_notes": "https://github.com/denoland/deno/releases/tag/v1.12.0",
+          "status": "nightly",
+          "engine": "V8",
+          "engine_version": "9.2"
         }
       }
     }
