Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/.github/workflows/ping-other-repos.yml
+++ b/.github/workflows/ping-other-repos.yml
@@ -1,4 +1,4 @@
-name: Remote Dispatch Action Initiator
+name: Ping other repos
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 jobs:
   ping-pong:
     runs-on: ubuntu-latest
+    if: ${{ github.respository == 'mdn/browser-compat-data' }}
     steps:
       - name: PING - Dispatch initiating repository event
         if: github.event.action != 'pong'
