--- a/.github/workflows/ping-other-repos.yml
+++ b/.github/workflows/ping-other-repos.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  ping-pong:
+  ping:
     runs-on: ubuntu-latest
     env:
       SIDESHOWBARKER_TOKEN: ${{ secrets.SIDESHOWBARKER }}
