Debug ping workflow

--- a/.github/workflows/ping-other-repos.yml
+++ b/.github/workflows/ping-other-repos.yml
@@ -3,15 +3,15 @@ name: Ping other repos
 on:
   push:
     branches: [main]
-
 jobs:
   ping:
     runs-on: ubuntu-latest
-    if: ${{ github.respository == 'mdn/browser-compat-data' }}
     steps:
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v1
+        if: ${{ github.repository == 'mdn/browser-compat-data' }}
         with:
           token: ${{ secrets.SIDESHOWBARKER }}
+          repository: w3c/mdn-spec-links
           event-type: ping
           client-payload: '{"repository": "${{ github.repository }}", "ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
