--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "show-errors": "npm test 1> /dev/null",
     "test": "npm run lint && npm run mocha",
     "traverse": "node scripts/traverse"
+  },
+  "dependencies": {
+    "jsdom": "^16.6.0",
+    "sync-request": "^6.1.0"
   }
 }
