--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "browser-specs": "~2.1.0",
     "chalk": "~4.1.0",
     "compare-versions": "~3.6.0",
+    "jsdom": "^16.6.0",
     "mdn-confluence": "~2.2.2",
     "mocha": "~9.0.0",
     "ora": "~5.4.0",
     "prettier": "~2.3.0",
+    "sync-request": "^6.1.0",
     "yargs": "~17.0.1"
   },
   "scripts": {
